--- a/S2x.html
+++ b/S2x.html
@@ -18,7 +18,7 @@
       var viewer = new Autodesk.Viewing.Private.GuiViewer3D(myViewerDiv);
       var options = {
           'env' : 'Local',
-          'document' : './f3bbcfb6-f6b2-429d-a23c-fc8ef2bd4a3a/0/0.svf'
+          'document' : './0.svf'
       };
       Autodesk.Viewing.Initializer(options, function() {
         viewer.start(options.document, options);
